src/objects/MUSW__Automation_Result__c.object
<CustomObject>
    <description>Automation Rule Result outcomes</description>
    <fields>
        <fullName>MUSW__Action_Type__c</fullName>
        <description>Specifies the action that the result operation should apply.</description>
        <label>Action Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Add Adjusted Calendar Days</fullName>
                </value>
                <value>
                    <fullName>Add Business Day Hours</fullName>
                </value>
                <value>
                    <fullName>Add Business Days</fullName>
                </value>
                <value>
                    <fullName>Add Calendar Days</fullName>
                </value>
                <value>
                    <fullName>Add Calendar Hours</fullName>
                </value>
                <value>
                    <fullName>Add Error</fullName>
                </value>
                <value>
                    <fullName>Add Letter</fullName>
                </value>
                <value>
                    <fullName>Add Notification</fullName>
                </value>
                <value>
                    <fullName>Add Record</fullName>
                </value>
                <value>
                    <fullName>Add Record - Duplicate Check</fullName>
                    <default>true</default>
                    <label>Add Record - Duplicate Check</label>
                </value>
                <value>
                    <fullName>Add Records</fullName>
                </value>
                <value>
                    <fullName>Add Records - Duplicate Check</fullName>
                </value>
                <value>
                    <fullName>Clone Record</fullName>
                </value>
                <value>
                    <fullName>Decrement Number</fullName>
                </value>
                <value>
                    <fullName>Divide Number</fullName>
                </value>
                <value>
                    <fullName>Email Report</fullName>
                </value>
                <value>
                    <fullName>Increment Number</fullName>
                </value>
                <value>
                    <fullName>Maximum</fullName>
                </value>
                <value>
                    <fullName>Minimum</fullName>
                </value>
                <value>
                    <fullName>Multiply Number</fullName>
                </value>
                <value>
                    <fullName>New Value (Numeric Field)</fullName>
                </value>
                <value>
                    <fullName>New Value (Text Field)</fullName>
                </value>
                <value>
                    <fullName>New Value - Duplicate Check</fullName>
                </value>
                <value>
                    <fullName>Send Email</fullName>
                </value>
                <value>
                    <fullName>Sum Numbers</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MUSW__Active__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Determines whether the result operation should be applied or ignored.</description>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MUSW__Automation_Rule__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to the rule this result operation is part of.</description>
        <label>Automation Rule</label>
        <referenceTo>MUSW__Automation_Rule__c</referenceTo>
        <relationshipName>Results</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>MUSW__Expression__c</fullName>
        <description>Javascript formula expression for Assess rules only. BasicGov formulas in the Value field is the equivalent for all other rule types.</description>
        <label>Expression</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>MUSW__Field__c</fullName>
        <description>Specifies where to store the result value of this operation.</description>
        <label>Field</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MUSW__Group_Order__c</fullName>
        <description>Indicates the result operation order (visual only).</description>
        <formula>If(MUSW__Group__c &gt;9, text(MUSW__Group__c),&quot;0&quot; &amp;text(MUSW__Group__c)) &amp; &quot; - &quot;&amp; If(MUSW__Order__c &gt;9, text(MUSW__Order__c),&quot;0&quot; &amp;text(MUSW__Order__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Group-Order</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MUSW__Group__c</fullName>
        <defaultValue>1</defaultValue>
        <description>Used to group operation results, typically per record outcomes. This may have more than one resulting record impacted by using Group.</description>
        <label>Group</label>
        <precision>2</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MUSW__Order__c</fullName>
        <defaultValue>1</defaultValue>
        <label>Order</label>
        <precision>2</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MUSW__Table__c</fullName>
        <description>Specifies what table the applied operation should receive the updated or inserted result record.</description>
        <label>Table</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Account</fullName>
                </value>
                <value>
                    <fullName>Attachment</fullName>
                </value>
                <value>
                    <fullName>MUSW__Application2__c</fullName>
                </value>
                <value>
                    <fullName>MUSW__Complaint2__c</fullName>
                </value>
                <value>
                    <fullName>MUSW__Condition__c</fullName>
                </value>
                <value>
                    <fullName>MUSW__Fee__c</fullName>
                </value>
                <value>
                    <fullName>MUSW__Inspection__c</fullName>
                </value>
                <value>
                    <fullName>MUSW__Inspection_Violation__c</fullName>
                </value>
                <value>
                    <fullName>MUSW__License2__c</fullName>
                </value>
                <value>
                    <fullName>MUSW__Milestone__c</fullName>
                </value>
                <value>
                    <fullName>MUSW__Parcel__c</fullName>
                </value>
                <value>
                    <fullName>MUSW__Permit2__c</fullName>
                </value>
                <value>
                    <fullName>MUSW__Project2__c</fullName>
                </value>
                <value>
                    <fullName>MUSW__Review__c</fullName>
                </value>
                <value>
                    <fullName>MUSW__Submission__c</fullName>
                </value>
                <value>
                    <fullName>MUSW__Work_Item__c</fullName>
                </value>
                <value>
                    <fullName>Task</fullName>
                </value>
                <value>
                    <fullName>Variable</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MUSW__Track_No__c</fullName>
        <description>Unique number of the filter that is used to migrate rule filter data.</description>
        <externalId>true</externalId>
        <label>Tracking Number</label>
        <length>20</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>MUSW__Transform__c</fullName>
        <description>Instructions for applied result records before being saved. This allows more than 1 record to be applied within a single group.</description>
        <label>Transform</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MUSW__Value__c</fullName>
        <description>Specifies a static value, merge field, and/or formula outcome value to calculate.</description>
        <label>Value</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <label>Automation Result</label>
    <nameField>
        <displayFormat>{0000000}</displayFormat>
        <label>Result Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Results</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>MUSW__Value_Check_Syntax</fullName>
        <active>true</active>
        <description>Check syntax</description>
        <errorConditionFormula>OR( 
 ISBLANK(MUSW__Value__c), 
 CONTAINS(MUSW__Value__c, &quot;&lt;content&quot;) 
     &amp;&amp; !REGEX(MUSW__Value__c, &apos;[a-zA-Z\\s\\d]*(&lt;content(\\s+\\w+=&quot;?[\\w\\s]+&quot;?)*&gt;\\w+(\\.\\w+){1,2}&lt;/content&gt;)?[a-zA-Z\\s\\d]*&apos;) 
     &amp;&amp; !REGEX(MUSW__Value__c, &apos;[a-zA-Z\\s\\d]*(&lt;content-diff(\\s+\\w+=&quot;?[\\w\\s]+&quot;?)*&gt;\\w+(\\.\\w+){1,2}&lt;/content-diff&gt;)?[a-zA-Z\\s\\d]*&apos;), 
/*
 CONTAINS(MUSW__Value__c, &quot;{!&quot;) 
    &amp;&amp; !REGEX(MUSW__Value__c,&apos;[a-zA-Z\\s\\d]*(\\{\\!\\$?\\w+(\\.\\w+){1,2\\)?[a-zA-Z\\s\\d]*&apos;), 
*/
 CONTAINS(MUSW__Value__c, &quot;&lt;today&quot;) &amp;&amp; !REGEX(MUSW__Value__c, &apos;&lt;today(\\s+\\w+=&quot;?[\\w\\s]+&quot;?)*/&gt;&apos;), 
 CONTAINS(MUSW__Value__c, &quot;&lt;now&quot;) &amp;&amp; !REGEX(MUSW__Value__c, &apos;&lt;now/&gt;&apos;), 
 CONTAINS(MUSW__Value__c, &quot;&lt;user&quot;) &amp;&amp; !REGEX(MUSW__Value__c, &apos;&lt;user/&gt;&apos;), 
 CONTAINS(MUSW__Value__c, &quot;&lt;formula&quot;) &amp;&amp; !REGEX(MUSW__Value__c, &apos;&lt;formula&gt;.*&lt;/formula&gt;&apos;), 
 ISPICKVAL(MUSW__Action_Type__c,&quot;Add Letter&quot;) &amp;&amp; !REGEX(MUSW__Value__c, &apos;&lt;letter(\\s+\\w+=&quot;?[\\w\\s]+&quot;?)*/&gt;&apos;), 
 ISPICKVAL(MUSW__Action_Type__c,&quot;Send Email&quot;) &amp;&amp; !REGEX(MUSW__Value__c, &apos;&lt;email(\\s+\\w+=&quot;?[\\w\\s]+&quot;?)*/&gt;&apos;), 
 ISPICKVAL(MUSW__Action_Type__c,&quot;Email Report&quot;) &amp;&amp; !REGEX(MUSW__Value__c, &apos;&lt;report(\\s+\\w+=&quot;?[\\w\\s]+&quot;?)*/&gt;&apos;) 
)</errorConditionFormula>
        <errorDisplayField>MUSW__Value__c</errorDisplayField>
        <errorMessage>Invalid Result Value syntax for selected Action Type</errorMessage>
    </validationRules>
</CustomObject>